new september commit

--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span
-            class="navbar-toggler-icon"
-            style="background-color: red !important"
-          ></span>
+        <span class="navbar-toggler-icon">   
+          <i class="fa fa-navicon" style="color:#02457a  ; font-size:28px;"></i>
+        </span>
+      
+
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsFurni">
@@ -73,9 +74,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="index.html">HOME</a>
             </li>
-            <li><a class="nav-link" href="about.html">ABOUT US</a></li>
+            <li><a class="nav-link" href="about.html">ABOUT</a></li>
             <li><a class="nav-link" href="services.html">SERVICES</a></li>
-            <li><a class="nav-link" href="contact.html">CONTACT US</a></li>
+            <li><a class="nav-link" href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </div>
