--- a/services.html
+++ b/services.html
@@ -51,235 +51,58 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span
-            class="navbar-toggler-icon"
-            style="background-color: red !important"
-          ></span>
+        <span class="navbar-toggler-icon">   
+          <i class="fa fa-navicon" style="color:#02457a  ; font-size:28px;"></i>
+        </span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsFurni">
           <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0 p-2">
             <li><a class="nav-link" href="index.html">HOME</a></li>
-            <li><a class="nav-link" href="about.html">ABOUT US</a></li>
+            <li><a class="nav-link" href="about.html">ABOUT</a></li>
 
             <li class="nav-item active">
               <a class="nav-link" href="services.html">SERVICES</a>
             </li>
-            <li><a class="nav-link" href="contact.html">CONTACT US</a></li>
+            <li><a class="nav-link" href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- End Header/Navigation -->
 
-    <!-- Start Hero Section -->
-    <div class="hero">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-5">
-            <div class="intro-excerpt">
-              <h1>Services</h1>
-              <p class="mb-4">
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
-              </p>
-             
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <div class="hero-img-wrap">
-              <img src="images/couch.png" class="img-fluid" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End Hero Section -->
 
     <!-- Start Why Choose Us Section -->
-    <div class="why-choose-section">
-      <div class="container">
-        <div class="row my-5">
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/truck.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Fast &amp; Free Shipping</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/bag.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Easy to Shop</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/support.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>24/7 Support</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/return.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Hassle Free Returns</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/truck.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Fast &amp; Free Shipping</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/bag.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Easy to Shop</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/support.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>24/7 Support</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
-
-          <div class="col-6 col-md-6 col-lg-3 mb-4">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/return.svg" alt="Image" class="imf-fluid" />
-              </div>
-              <h3>Hassle Free Returns</h3>
-              <p>
-                Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-                velit. Aliquam vulputate.
-              </p>
-            </div>
-          </div>
+    <body>
+      <div class="section_0"></div>
+      <div class="section_1">
+        <div class="section_1_textbox">
+          <h1>Services</h1>
         </div>
       </div>
-    </div>
+      <section class="services-section">
+          <div class="services-container">
+              <div class="service-card">
+                  <h3>Mechanical</h3>
+                  <p>Our mechanical services cover a wide range of solutions, including HVAC systems, equipment installation, and preventive maintenance. We ensure optimal performance and energy efficiency for all your mechanical needs.</p>
+              </div>
+              <div class="service-card">
+                  <h3>Electrical</h3>
+                  <p>From wiring and installations to repairs and upgrades, our electrical services are designed to keep your property safe and powered. We handle both residential and commercial electrical projects with expertise.</p>
+              </div>
+              <div class="service-card">
+                  <h3>Plumbing</h3>
+                  <p>Our comprehensive plumbing services include installation, repair, and maintenance of pipes, fixtures, and water systems. We ensure efficient water flow and address any plumbing issues promptly and professionally.</p>
+              </div>
+          </div>
+      </section>
+  </body>
     <!-- End Why Choose Us Section -->
 
-    <!-- Start Product Section -->
-    <div class="product-section pt-0">
-      <div class="container">
-        <div class="row">
-          <!-- Start Column 1 -->
-          <div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-            <h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-            <p class="mb-4">
-              Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet
-              velit. Aliquam vulputate velit imperdiet dolor tempor tristique.
-            </p>
-            <p><a href="#" class="btn">Explore</a></p>
-          </div>
-          <!-- End Column 1 -->
-
-          <!-- Start Column 2 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-1.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Nordic Chair</h3>
-              <strong class="product-price">$50.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 2 -->
-
-          <!-- Start Column 3 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-2.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Kruzo Aero Chair</h3>
-              <strong class="product-price">$78.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 3 -->
-
-          <!-- Start Column 4 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-3.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Ergonomic Chair</h3>
-              <strong class="product-price">$43.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 4 -->
-        </div>
-      </div>
-    </div>
-    <!-- End Product Section -->
+   
 
     <!-- Start Testimonial Slider -->
-    <div class="testimonial-section before-footer-section">
+    <!-- <div class="testimonial-section before-footer-section">
       <div class="container">
         <div class="row">
           <div class="col-lg-7 mx-auto text-center">
@@ -333,7 +156,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- END item -->
 
                 <div class="item">
                   <div class="row justify-content-center">
@@ -368,7 +190,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- END item -->
 
                 <div class="item">
                   <div class="row justify-content-center">
@@ -403,13 +224,12 @@
                     </div>
                   </div>
                 </div>
-                <!-- END item -->
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End Testimonial Slider -->
 
     <!-- Start Footer Section -->
