design 90% 9/4/24 at 10:17pm

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 		<div class="contact-section text-center">
 			<div class="contact-info">
 				<h2 class="section-title fw-bold">Let's Build Something Great Together</h2>
-				<p>
+				<p class="h5">
 					How can we help? Please fill out your inquiry and our team will get in touch with you shortly!
 				</p>
 
@@ -196,14 +196,14 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 text-center text-lg-end">
+				<!-- <div class="col-lg-6 text-center text-lg-end">
 					<ul class="list-unstyled d-inline-flex ms-auto">
 						<li class="me-4">
 							<a href="#" class="text-white">Terms &amp; Conditions</a>
 						</li>
 						<li><a href="#" class="text-white">Privacy Policy</a></li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
