--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="./images/carousel-1.jpg"
-                class="d-block w-100 h-50 img-fluid w-100"
+                src="./images/carousel-1.jpeg"
+                class="d-block w-100 h-50 img-fluid opacity-50 w-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="./images/carousel-2.jpg"
-                class="d-block w-100 h-50 img-fluid w-100"
+                src="./images/carousel-2.jpeg"
+                class="d-block w-100 h-50 img-fluid opacity-50 w-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="./images/carousel-3.jpg"
-                class="d-block w-100 h-50 img-fluid w-100"
+                src="./images/carousel-3.jpeg"
+                class="d-block w-100 h-50 img-fluid opacity-50 w-100"
                 alt="..."
               />
             </div>
@@ -119,8 +119,8 @@
         <div
           class="position-absolute top-50 start-50 translate-middle d-flex flex-column align-items-center justify-content-center text-white"
         >
-          <h1>KONCEPT</h1>
-          <p>CONCEPT TO REALITY</p>
+          <h1 class="text-black "> CONCEPT TO REALITY </h1>
+         
           <a href="contact.html" class="btn rounded-3">Contact Us</a>
         </div>
       </div>
@@ -133,7 +133,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-6">
             <h2 class="section-title fw-bolder text-primary">Who we are</h2>
-            <p>
+            <p class="h5">
               With over a decade of industry experience, we deliver expert
               electrical, mechanical, plumbing, and lighting design solutions.
               Our foundation rests on unwavering integrity, paramount safety,
@@ -187,7 +187,7 @@
                         </g>
                       </g>
                     </svg>
-                    <span class="fs-4"> Mechanical</span>
+                    <span class="fs-4 ms-2"> Mechanical</span>
                   </a>
                 </div>
               </div>
@@ -236,7 +236,7 @@
                         </g>
                       </g>
                     </svg>
-                    <span class="fs-4"> Plumbing</span>
+                    <span class="fs-4 ms-2"> Plumbing </span>
                   </a>
                 </div>
               </div>
@@ -246,7 +246,7 @@
           <div class="col-lg-5">
             <div class="img-wrap">
               <img
-                src="images/home.jpg"
+                src="images/home.jpeg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -343,12 +343,12 @@
               </p>
             </div>
 
-            <div class="col-lg-6 text-center text-lg-end">
+            <!-- <div class="col-lg-6 text-center text-lg-end">
               <ul class="list-unstyled d-inline-flex ms-auto">
                 <li class="me-4"><a href="#" class="text-white">Terms &amp; Conditions</a></li>
                 <li><a href="#" class="text-white">Privacy Policy</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
