--- a/services.html
+++ b/services.html
@@ -84,37 +84,36 @@
           <div class="services-container">
               <div class="service-card">
                   <h3 class ="text-align: center">Mechanical</h3>
-                  <img src="images/home.jpg" class="img-fluid mb-5">
+                  <img src="images/home.jpeg" class="img-fluid mb-5">
                   <ul class="text-align: left;
-                  padding-left: 20px;">
-                    <li>HVAC systems installation and maintenance</li>
-                    <li>Equipment installation</li>
-                    <li>Preventive maintenance</li>
-                    <li>Energy efficiency optimization</li>
+                  padding-left: 20px; text-black">
+                    <li>HVAC Systems</li>
+                    <li>Thermal Envelope</li>
+                    <li>Chilled Water System</li>
+                    <li>Energy Compliance Calculations</li>
                   </ul>
               </div>
               <div class="service-card">
                   <h3>Electrical</h3>
-                  <img src="images/home.jpg" class="img-fluid mb-5">
+                  <img src="images/home.jpeg" class="img-fluid mb-5">
                   <ul class="text-align: left;
-                  padding-left: 20px;">
-                    <li>Wiring and installations</li>
-                    <li>Repairs and upgrades</li>
-                    <li>Residential and commercial projects</li>
-                    <li>Safety inspections</li>
+                  padding-left: 20px; text-black">
+                    <li>Power Distribution</li>
+                    <li>Lighting Design and Photometric Study</li>
+                    <li>Back Up Power Solution</li>
+                   
                   </ul>
 
               </div>
               <div class="service-card">
                   <h3>Plumbing</h3>
-                  <img src="images/home.jpg" class="img-fluid mb-5">
+                  <img src="images/home.jpeg" class="img-fluid mb-5">
                   <ul class="text-align: left;
-                  padding-left: 20px;">
-                    <li>Pipe installation and repair</li>
-                    <li>Fixture installation and maintenance</li>
-                    <li>Water system services</li>
-                    <li>Emergency plumbing repairs</li>
-                  </ul>              </div>
+                  padding-left: 20px; text-black">
+                    <li>Hot/Cold Water System</li>
+                    <li>Storm Water System</li>
+                  </ul>       
+                </div>
           </div>
       </section>
   </body>
@@ -349,14 +348,14 @@
               </p>
             </div>
 
-            <div class="col-lg-6 text-center text-lg-end">
+            <!-- <div class="col-lg-6 text-center text-lg-end">
               <ul class="list-unstyled d-inline-flex ms-auto">
                 <li class="me-4">
                   <a href="#" class="text-white">Terms &amp; Conditions</a>
                 </li>
                 <li><a href="#" class="text-white">Privacy Policy</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
