95% design 9/6/24 at 3:10pm

--- a/services.html
+++ b/services.html
@@ -1,9 +1,6 @@
 <!-- /*
 * Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
+
 */ -->
 <!DOCTYPE html>
 <html lang="en">
@@ -83,7 +80,7 @@
           <div class="services-container">
               <div class="service-card">
                   <h3 class ="text-align: center">Mechanical</h3>
-                  <img src="images/home.jpeg" class="img-fluid mb-5">
+                  <img src="images/mechanical_service.jpeg" class="img-fluid mb-5">
                   <ul class="text-align: left;
                   padding-left: 20px; text-black">
                     <li>HVAC Systems</li>
@@ -94,7 +91,7 @@
               </div>
               <div class="service-card">
                   <h3>Electrical</h3>
-                  <img src="images/home.jpeg" class="img-fluid mb-5">
+                  <img src="images/electrical_service.jpeg" class="img-fluid mb-5">
                   <ul class="text-align: left;
                   padding-left: 20px; text-black">
                     <li>Power Distribution</li>
@@ -106,7 +103,7 @@
               </div>
               <div class="service-card">
                   <h3>Plumbing</h3>
-                  <img src="images/home.jpeg" class="img-fluid mb-5">
+                  <img src="images/plumbing_service.jpg" class="img-fluid mb-5">
                   <ul class="text-align: left;
                   padding-left: 20px; text-black">
                     <li>Hot/Cold Water System</li>
