100% desgin 9/6/24 at 10:30pm

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
 		arial-label="Furni navigation bar">
 
 		<div class="container">
-			<a class="navbar-brand" href="index.html">KONCEPT</a>
+			<a class="navbar-brand" href="index.html">
+				<img src="images/Original-Logo.png" alt="KONCEPT" width="80" height="80">
+			</a>
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni"
 				aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
@@ -125,7 +127,9 @@
 		<div class="row g-5 mb-5">
 			<div class="col-lg-4">
 				<div class="mb-4 footer-logo-wrap">
-					<a href="#" class="footer-logo">KONCEPT</a>
+					<a href="#" class="footer-logo">
+						KONCEPT
+					</a>
 				</div>
 
 				<div class="col-lg-12">
