--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="images/Original Logo Symbol.png" />
 
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -47,7 +47,9 @@
       arial-label="Furni navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">KONCEPT</a>
+        <a class="navbar-brand" href="index.html">
+         <img src="images/Original-Logo.png" alt="KONCEPT" width="80" height="80">
+        </a>
 
         <button
           class="navbar-toggler"
