--- a/services.html
+++ b/services.html
@@ -36,7 +36,9 @@
       arial-label="Furni navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">KONCEPT</a>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Original-Logo.png" alt="KONCEPT" width="80" height="80">
+        </a>
 
         <button
           class="navbar-toggler"
@@ -254,7 +256,9 @@
         <div class="row g-5 mb-5">
           <div class="col-lg-4">
             <div class="mb-4 footer-logo-wrap">
-              <a href="#" class="footer-logo">KONCEPT</a>
+              <a href="#" class="footer-logo">
+                KONCEPT
+              </a>
             </div>
 
             <div class="col-lg-12">
