--- a/about.html
+++ b/about.html
@@ -36,7 +36,9 @@
       arial-label="Furni navigation bar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">KONCEPT</a>
+        <a class="navbar-brand" href="index.html">
+          <img src="images/Original-Logo.png" alt="KONCEPT" width="80" height="80">
+        </a>
 
         <button
           class="navbar-toggler"
