100% design 9/6/24 at 10:50pm

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="images/Original Logo Symbol.png" />
+    <link rel="shortcut icon" href="images/Wordpress Transparent.png" />
 
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -36,7 +36,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <title>
-      Koncept Engineering
+      KONCEPT Engineering
     </title>
   </head>
 
